# sparkle-test

./: Pipfile  README.md  build.py  pyproject.toml
sparkle_test/: test_case.py
src/main/python/: sparkle_test_case.py
src/main/python/sparkle_test/: __init__.py  test_case.py
src/unittest/python/: log4j.properties  sparkle_test_case_tests.py  test_case_tests.py
