[tool.poetry]
name = "sparkle-test"
version = "1.2.0"
description = ""
authors = ["Machiel Keizer-Groeneveld <machiel.groeneveldkeizer@vodafoneziggo.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
#pandas = "^1.3.5"
pandas = "1.3.5"

[tool.poetry.dev-dependencies]
pyspark = "3.2.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
